--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,16 +5,19 @@ footer {
     background-repeat: repeat;
     background-size: cover;
     position: relative;
+
     // background-image: url(../images/footer-bg.png);
     // @include breakpoint(ipad-max) {
     //  object-fit: cover;
     //  background-position: left right;
-    @include breakpoint(ipad-max){
+    @include breakpoint(ipad-max) {
         margin-top: 100px;
     }
-    @include breakpoint(mobile-max){
+
+    @include breakpoint(mobile-max) {
         margin-top: 100px;
     }
+
     // }
 
     &::before {
@@ -42,7 +45,7 @@ footer {
         justify-content: space-around;
         padding-top: 10.7rem;
         flex-wrap: wrap;
-      
+
 
         @include breakpoint(portrait-mobile-max) {
             flex-direction: column;
@@ -55,12 +58,13 @@ footer {
                 margin-top: 1.5rem;
                 font-family: $quaternary-font-family;
                 margin-left: 2rem;
-                
+
             }
 
             h2 {
                 color: $white-color;
                 font-family: $secondary-font-family;
+                font-weight: 400;
                 font-size: 2.4rem;
                 margin: 0;
 
@@ -80,7 +84,8 @@ footer {
                     color: $white-color;
 
                 }
-                .footer-heading-span{
+
+                .footer-heading-span {
                     margin-left: .8rem;
                 }
 
@@ -90,15 +95,18 @@ footer {
                 li {
                     line-height: 3rem;
                     margin-top: 2.5rem;
+
                     @include breakpoint(medium-large-desktop-max) {
                         margin-top: 1.5rem;
                     }
 
                     a {
                         font-size: 1.8rem;
-                        font-family: $primary-font-family;
-                        &:hover{
-                          color: #F2E162;
+                        // font-family: $primary-font-family;
+                          font-family: $secondary-font-family;
+                          font-weight: 400;
+                        &:hover {
+                            color: #F2E162;
                         }
 
                         @include breakpoint(medium-large-desktop-max) {
@@ -118,7 +126,7 @@ footer {
 
         .footer-frist-link {
             padding-left: 6.2rem;
-           
+
 
             @include breakpoint(ipad-max) {
                 padding-left: 4.2rem;
@@ -132,6 +140,7 @@ footer {
 
                 padding-top: 2.5rem;
                 padding-top: 3rem;
+
                 @include breakpoint(medium-large-desktop-max) {
                     padding-top: 1rem;
                 }
@@ -150,13 +159,15 @@ footer {
                     a {
                         display: flex;
                         align-items: center;
-                          &:hover{
+
+                        &:hover {
                             color: #F2E162;
-                          }
+                        }
 
                         address {
                             font-size: 1.8rem;
                             font-family: $primary-font-family;
+                            font-weight: 400;
                             max-width: 225px;
                             margin-bottom: 0;
 
@@ -174,9 +185,12 @@ footer {
 
                     font-size: 1.8rem;
                     font-family: $primary-font-family;
-                    a{
+                    font-weight: 400;
+
+                    a {
+
                         // font-size: 1.4rem;
-                        &:hover{
+                        &:hover {
                             color: #F2E162;
                         }
                     }
@@ -187,9 +201,10 @@ footer {
 
                     .icon-letter {
                         font-size: 2.9rem;
-                        $primary-font-family: 'Circular-Std-Book';
+                       font-family:$primary-font-family ; 
+                       font-weight: 400;
                         padding-right: .7rem;
-                       
+
 
                         @include breakpoint(medium-large-desktop-max) {
                             font-size: 1.4rem;
@@ -205,7 +220,8 @@ footer {
                     align-items: center;
                     font-size: 1.8rem;
                     font-family: $primary-font-family;
-                         
+                    font-weight: 400;
+
                     @include breakpoint(medium-large-desktop-max) {
                         font-size: 1.4rem;
                     }
@@ -214,20 +230,23 @@ footer {
                         display: flex;
                         align-items: center;
                         margin-right: 0.5rem;
-                        
-                            &:hover{
-                                color: #F2E162;
-                              }
-                        
+
+                        &:hover {
+                            color: #F2E162;
+                        }
+
                     }
 
                     .icon-call {
                         font-size: 2.9rem;
-                        $primary-font-family: 'Circular-Std-Book';
+                        // $primary-font-family: 'Circular-Std-Book';
+                        font-family: $primary-font-family ;
                         padding-right: .7rem;
+
                         .icon-call:before {
                             content: "\e904";
-                         color: $white-color;
+                            color: $white-color;
+                            font-weight: 400;
                         }
 
                         @include breakpoint(medium-large-desktop-max) {
@@ -248,6 +267,7 @@ footer {
                         font-size: 2.2rem;
                         font-family: $secondary-font-family;
                         color: $white-color;
+                        font-weight: 400;
                         padding-bottom: 3.2rem;
 
                         @include breakpoint(medium-large-desktop-max) {
@@ -270,26 +290,35 @@ footer {
                             padding: 0;
                             // margin-left: 1rem;
                             margin-right: 1rem;
-                            
-                            &:hover{
+
+                            &:hover {
+
                                 // background-color: #4267B2;
-                                .icon-facebook,.icon-youtube ,.icon-twitter {
+                                .icon-facebook,
+                                .icon-youtube,
+                                .icon-twitter {
                                     font-size: 2.2rem;
-                                   &::before{
-                                    color: #F2E162;
-                                   }
-                                   
+
+                                    &::before {
+                                        color: #F2E162;
+                                    }
+
                                 }
 
                             }
-                            a{
+
+                            a {
                                 display: flex;
                             }
+
                             .icon-facebook {
                                 font-size: 2.2rem;
-                               
-                               
-                            }
+                                transition: 0.4s;
+                                -webkit-transition: 0.4s;
+                                -moz-transition: 0.4s;
+                                -ms-transition: 0.4s;
+                                -o-transition: 0.4s;
+}
                         }
                     }
 
@@ -308,13 +337,16 @@ footer {
         color: #EEEEEE;
         padding: 3.6rem 0;
         border-top: 0.1rem solid rgba(253, 253, 253, 100%);
-         @include breakpoint(larg-desktop){
+
+        @include breakpoint(larg-desktop) {
             margin-top: 5rem;
-         }
+        }
 
         h2 {
             font-family: 'Roboto', sans-serif;
-               font-size: 1.8rem;
+            font-weight: 400;
+            font-size: 1.8rem;
+
             @include breakpoint(ipad-max) {
                 font-size: 1.6rem;
             }
@@ -324,7 +356,8 @@ footer {
             }
         }
     }
-    .transprency{
+
+    .transprency {
         padding-top: 6rem;
     }
 }
