--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -13,6 +13,7 @@ header {
       .top-header-row {
         display: flex;
         justify-content: space-between;
+        padding: 1rem 0;
         // padding: 0 15px;
 
 
@@ -168,10 +169,10 @@ header {
             .top-header-dropdown {
               overflow: hidden;
               // padding: 1rem 2.2rem;
-              padding: 1rem 0 1rem 2.2rem;
+              // padding: 1rem 0 1rem 2.2rem;
 
               @include breakpoint(medium-large-desktop-max) {
-                padding: 1rem 0;
+                // padding: 1rem 0;
                 font-size: 1.4rem;
               }
 
