change  link color

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -309,6 +309,7 @@ footer {
 
                             a {
                                 display: flex;
+                                transition: 0.4s;
                             }
 
                             .icon-facebook {
