change  link color

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -8,6 +8,9 @@
    @include breakpoint(medium-large-desktop-max){
       padding: 0 30px;
   }
+  @include breakpoint(ipad-max){
+   padding: 0 20px;
+}
 }
 .container-fluid{
    width: 100%;
